# cmaketest

./: CMakeLists.txt  README.md  bar.cmake  bar1.cxx  bar1.h  bar2.cxx  bar2.h  bar_hidden.cmake  bar_hidden.cxx  foo.cmake  foo.cxx  foo.h  main.cxx  visibility.h
